| Summary: | ASTERISK-26527: Testsuite: increase timeout to check "core fullybooted wait" up to 30 sec | ||
| Reporter: | Badalian Vyacheslav (slavon) | Labels: | |
| Date Opened: | 2016-10-30 13:22:51 | Date Closed: | 2016-12-02 09:48:13.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Tests/testsuite |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Hello.
If add ASAN,LSAN and UBSAN to asterisk it's slow start (on my docker container about 15-20 secs to fullybooted). Please increase timeout to check "core fullybooted wait" up to 30 sec. I try add {code} cd /usr/src/testsute/asttest && \ sed -i -e "s/500000/30000000/" lib/lua/astlib.lua && \ sed -i -e "s/timeout = 90 if self.valgrind_enabled else 5/timeout = 90 if self.valgrind_enabled else 30/" ./../lib/python/asterisk/asterisk.py {code} to code before complite, but it's not help... {code} [Oct 30 18:23:26] ERROR[644]: asterisk:496 __wait_fully_booted_error: Asterisk core waitfullybooted for 127.0.0.1 failed [Oct 30 18:23:26] ERROR[644]: test_case:398 __check_success_failure: Asterisk core waitfullybooted for 127.0.0.1 failed {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-10-30 13:22:52.211-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2016-12-02 09:48:13.727-0600 Change 4545 merged by zuul: testsuite: Increase the startup core fully booted timeout time. [https://gerrit.asterisk.org/4545|https://gerrit.asterisk.org/4545] By: Friendly Automation (friendly-automation) 2016-12-02 09:49:00.105-0600 Change 4546 merged by zuul: test_case.py: Ignore reactor timeout if already stopping. [https://gerrit.asterisk.org/4546|https://gerrit.asterisk.org/4546] By: Friendly Automation (friendly-automation) 2016-12-02 09:49:58.245-0600 Change 4547 merged by zuul: tests/channels/pjsip/registration/outbound/interval_too_brief: Fix shutdown [https://gerrit.asterisk.org/4547|https://gerrit.asterisk.org/4547] By: Friendly Automation (friendly-automation) 2016-12-02 09:50:53.201-0600 Change 4548 merged by zuul: testsuite: Increase the shutdown timeout time. [https://gerrit.asterisk.org/4548|https://gerrit.asterisk.org/4548] By: Friendly Automation (friendly-automation) 2016-12-02 09:50:55.508-0600 Change 4549 merged by zuul: tests/channels/pjsip/statsd/registrations: Fix shutdown [https://gerrit.asterisk.org/4549|https://gerrit.asterisk.org/4549] By: Friendly Automation (friendly-automation) 2016-12-05 22:00:59.576-0600 Change 4542 merged by zuul: res_pjsip_outbound_registration.c: Filter redundant statsd reporting. [https://gerrit.asterisk.org/4542|https://gerrit.asterisk.org/4542] By: Friendly Automation (friendly-automation) 2016-12-05 22:01:02.822-0600 Change 4543 merged by zuul: res_pjsip_outbound_registration.c: Filter redundant statsd reporting. [https://gerrit.asterisk.org/4543|https://gerrit.asterisk.org/4543] By: Friendly Automation (friendly-automation) 2016-12-06 05:35:13.244-0600 Change 4541 merged by Joshua Colp: res_pjsip_outbound_registration.c: Filter redundant statsd reporting. [https://gerrit.asterisk.org/4541|https://gerrit.asterisk.org/4541] | ||